--- a/movie_frontend/src/components/movie-card/MovieCard.css
+++ b/movie_frontend/src/components/movie-card/MovieCard.css
@@ -1,6 +1,7 @@
 .card {
   display: flex;
   flex-direction: column;
+  text-align: center;
   align-items: center;
   width: 300px;
   margin: 20px;
@@ -26,10 +27,13 @@
   margin-bottom: 5px;
 }
 
-.show-more-button {
+
+.show-more-button,
+.show-less-button {
   margin-top: 10px;
   padding: 5px 10px;
   border: none;
+  text-align: center;
   border-radius: 5px;
   background-color: #dab1fb;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
